--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ hs_err_pid*
 # Ignore Gradle build output directory
 build
 
-C:\Users\emmam\IdeaProjects\Oinarria\app\src\main\resources\setup.properties
+/src/main/resources/setup.properties
