--- a/app/src/main/resources/setup.properties
+++ b/app/src/main/resources/setup.properties
@@ -1,3 +1,3 @@
 dbname=MySQL
 dbpath=SQLite
-pathToImages=C:\\Users\\emmam\\IdeaProjects\\Oinarria\\app\\src\\main\\resources\Images\\irudia
+pathToImages=C:\\Users\\emmam\\IdeaProjects\\Oinarria\\app\\src\\main\\resources\\Images\\irudia
