--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,12 @@ dependencies {
 
     //sqlite
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //MySQL
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
 }
 
 repositories {
