--- a/app/src/main/resources/setup.properties
+++ b/app/src/main/resources/setup.properties
@@ -1,3 +1,7 @@
 dbname=MySQL
+user=isad
+password=
+useSSL=FALSE
+serverTimezone=Europe/Madrid
 dbpath=SQLite
 pathToImages=C:\\Users\\emmam\\IdeaProjects\\Oinarria\\app\\src\\main\\resources\\Images\\irudia
