Branch berria sortu da

--- a/app/src/main/resources/setup.properties
+++ b/app/src/main/resources/setup.properties
@@ -4,4 +4,4 @@ password=
 useSSL=FALSE
 serverTimezone=Europe/Madrid
 dbpath=SQLite
-pathToImages=C:\\Users\\emmam\\IdeaProjects\\Oinarria\\app\\src\\main\\resources\\Images\\irudia
+pathToImages=C:\\Users\\Usuario\\IdeaProjects\\Oinarria\\app\\src\\main\\resources\\Images\\Irudia
