--- a/app/src/main/resources/setup.properties
+++ b/app/src/main/resources/setup.properties
@@ -3,5 +3,5 @@ user=isad
 password=
 useSSL=FALSE
 serverTimezone=Europe/Madrid
-dbpath=repos.db
+dbpath=repos.sqlite
 pathToImages=C:\\Users\\Usuario\\IdeaProjects\\Oinarria\\app\\src\\main\\resources\\Images\\Irudia
