setup.properties aldatuta eta mezua ondo jarrita

--- a/app/src/main/resources/setup.properties
+++ b/app/src/main/resources/setup.properties
@@ -1,7 +1,1 @@
-dbname=MySQL
-user=isad
-password=
-useSSL=FALSE
-serverTimezone=Europe/Madrid
-dbpath=repos.sqlite
-pathToImages=C:\\Users\\Usuario\\IdeaProjects\\Oinarria\\app\\src\\main\\resources\\Images\\Irudia
+dbpath=repos.db
